k8s/recepti-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recepti-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recepti-service
  template:
    metadata:
      labels:
        app: recepti-service
    spec:
      containers:
        - image: jvrhunc/recepti-service:latest
          name: recepti-service
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /check/health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /check/health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: recepti-service
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: recepti-service
