k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: recepti-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v1/recepti
            backend:
              serviceName: recepti-service
              servicePort: 8081
          - path: /v1/recepti/*
            backend:
              serviceName: recepti-service
              servicePort: 8081
          - path: /v1/slike
            backend:
              serviceName: slike-service
              servicePort: 8082
          - path: /v1/slike/*
            backend:
              serviceName: slike-service
              servicePort: 8082
          - path: /v1/komentarji
            backend:
              serviceName: komentarji-service
              servicePort: 8083
          - path: /v1/komentarji/*
            backend:
              serviceName: komentarji-service
              servicePort: 8083
